
2007-12-25  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/game-rules.c, common/gtk/game-settings.c, common/game.c,
	common/state.c, common/network.c, server/gtk/main.c, server/meta.c,
	server/turn.c, server/player.c, server/server.c, server/main.c,
	client/gtk/resource-table.c, client/gtk/develop.c,
	client/gtk/monopoly.c, client/gtk/gui.c, client/gtk/connect.c,
	client/common/client.c, client/common/develop.c,
	client/common/player.c, client/ai/greedy.c, client/ai/lobbybot.c:
	Reactivate comments for translators that were deactivated by
	'make reindent'.

2007-12-16  Roland Clobus <rclobus@bigfoot.com>
	* editor/gtk/game-resources.c, editor/gtk/game-devcards.c,
	editor/gtk/game-buildings.c, common/gtk/game-rules.c,
	common/gtk/gtkbugs.c, common/gtk/game-rules.h,
	common/gtk/game-settings.c, common/gtk/gtkbugs.h,
	common/gtk/select-game.c, server/gtk/main.c,
	client/gtk/resource-table.c, client/gtk/resource-table.h,
	client/gtk/resource.c, client/gtk/gui.c, client/gtk/connect.c:
	Added support for the new tooltip API of GTK+ 2.12
	
2007-11-22  Roland Clobus <rclobus@bigfoot.com>
	* client/ai/greedy.c: Don't attempt to buy a development card when the
	stock is empty.

2007-11-22  Roland Clobus <rclobus@bigfoot.com> and Bas Wijnen <shevek@fmf.nl>
	* The patches 2007-11-22 and 2007-09-16 fix CVE-2007-5933.
	(Both fixed bugs would cause a DoS by crashing the server)

2007-11-22  Bas Wijnen <shevek@fmf.nl>
	* common/state.c: Fix for an assert when a connection is broken before
	the state machine has been properly initialized.

2007-10-30  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/quote.c, client/gtk/legend.c, client/gtk/trade.c,
	client/gtk/offline.c, client/gtk/gui.c, client/gtk/gui.h: Use
	scrollbars where needed. The splash screen hides the chat.

2007-10-23  Roland Clobus <rclobus@bigfoot.com>
	* common/gtk/game-rules.c, common/gtk/game-rules.h, common/game.c,
	common/game.h, server/gtk/main.c, server/turn.c, server/server.h,